More Methods added

--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
+  "keywords": [
+    "math", 
+    "math calculations",
+    "javascript math npm",
+    "calculate the geometery shapes formulas"
+  ],
   "author": "Neha Sharma [neha@jslovers.com]",
   "license": "ISC"
 }
