added 'roots of a quadratic equation' keyword

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "reverse of number",
     "square perimeter",
     "rectangle perimeter",
-   "rectangle area"
+   "rectangle area",
+   "roots of a quadratic equation"
   ],
   "author": "Neha Sharma [neha@jslovers.com]",
   "license": "ISC"
