added function to compute volume of a sphere

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "square perimeter",
     "rectangle perimeter",
    "rectangle area",
-   "roots of a quadratic equation"
+   "roots of a quadratic equation",
+   "volume of a sphere"
   ],
   "author": "Neha Sharma [neha@jslovers.com]",
   "license": "ISC"
