added function to compute volume of a cylinder

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "rectangle perimeter",
    "rectangle area",
    "roots of a quadratic equation",
-   "volume of a sphere"
+   "volume of a sphere",
+   "volume of a cylinder"
   ],
   "author": "Neha Sharma [neha@jslovers.com]",
   "license": "ISC"
