added function to compute volume of a cube

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
    "rectangle area",
    "roots of a quadratic equation",
    "volume of a sphere",
-   "volume of a cylinder"
+   "volume of a cylinder",
+   "volume of a cube"
   ],
   "author": "Neha Sharma [neha@jslovers.com]",
   "license": "ISC"
