--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
    "roots of a quadratic equation",
    "volume of a sphere",
    "volume of a cylinder",
-   "volume of a cube"
+   "volume of a cube",
+   "volume of a cuboid"
   ],
   "author": "Neha Sharma [neha@jslovers.com]",
   "license": "ISC"
